improve app structure and html semantics

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,4 +1,4 @@
-<div>
+<section class="container mx-auto">
 
   <script x-data x-head.json type="application/json">
   {
@@ -26,91 +26,16 @@
   }
   </script>
 
-  <div class="container mx-auto">
-    <div class="py-16 lg:py-20">
-      <h1 class="flex items-center gap-3 pt-5 font-body text-4xl font-semibold text-primary dark:text-white md:text-5xl lg:text-6xl">
-        <img src="/assets/img/icon-blog.png" alt="icon envelope" />
-        Blog
-      </h1>
-
-      <div class="pt-3 sm:w-3/4">
-        <p class="font-body text-xl font-light text-primary dark:text-white">Articles, tutorials, snippets, rants, and everything else. Subscribe for updates as they happen.</p>
-      </div>
-
-      <form name="subscription" method="POST" netlify class="flex flex-col py-12 sm:flex-row">
-        <input type="email" id="email" name="email" required placeholder="Drop that email here…" class="w-full border border-primary bg-grey-lightest px-5 py-4 font-body font-light text-primary placeholder-primary transition-colors focus:border-secondary focus:outline-none focus:ring-2 focus:ring-secondary dark:border-secondary sm:w-1/2" />
-        <button type="submit" class="mt-5 bg-secondary px-10 py-4 font-body text-xl font-semibold text-white hover:bg-green sm:mt-0 md:text-2xl">Subscribe</button>
-      </form>
-
-      <div class="pt-8 lg:pt-12">
-        <div class="border-b border-grey-lighter pb-8">
-          <span class="mb-4 inline-block rounded-full bg-green-light px-2 py-1 font-body text-sm text-green">category</span>
-          <a x-link href="/blog/test" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">Vulputate ut pharetra sit amet aliquam id diam maecenas ultricies</a>
-          <div class="flex items-center pt-4">
-            <p class="pr-2 font-body font-light text-primary dark:text-white">July 19, 2020</p>
-            <span class="font-body text-grey dark:text-white">//</span>
-            <p class="pl-2 font-body font-light text-primary dark:text-white">4 min read</p>
-          </div>
-        </div>
-        <div class="border-b border-grey-lighter pt-10 pb-8">
-          <div class="flex items-center">
-            <span class="mb-4 inline-block rounded-full bg-grey-light px-2 py-1 font-body text-sm text-blue-dark">category</span>
-            <span class="mb-4 ml-4 inline-block rounded-full bg-yellow-light px-2 py-1 font-body text-sm text-yellow-dark">category</span>
-          </div>
-          <a x-link href="/post" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">Diam sit amet nisl suscipit adipiscing bibendum est ultricies integer</a>
-          <div class="flex items-center pt-4">
-            <p class="pr-2 font-body font-light text-primary dark:text-white">June 30, 2020</p>
-            <span class="font-body text-grey dark:text-white">//</span>
-            <p class="pl-2 font-body font-light text-primary dark:text-white">5 min read</p>
-          </div>
-        </div>
-        <div class="border-b border-grey-lighter pt-10 pb-8">
-          <span class="mb-4 inline-block rounded-full bg-blue-light px-2 py-1 font-body text-sm text-blue">category</span>
-          <a x-link href="/post" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">In eu mi bibendum neque egestas congue quisque egestas diam</a>
-          <div class="flex items-center pt-4">
-            <p class="pr-2 font-body font-light text-primary dark:text-white">June 26, 2020</p>
-            <span class="font-body text-grey dark:text-white">//</span>
-            <p class="pl-2 font-body font-light text-primary dark:text-white">3 min read</p>
-          </div>
-        </div>
-        <div class="border-b border-grey-lighter pt-10 pb-8">
-          <span class="mb-4 inline-block rounded-full bg-green-light px-2 py-1 font-body text-sm text-green">category</span>
-          <a x-link href="/post" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">Elit eget gravida cum sociis natoque penatibus et magnis dis</a>
-          <div class="flex items-center pt-4">
-            <p class="pr-2 font-body font-light text-primary dark:text-white">July 19, 2020</p>
-            <span class="font-body text-grey dark:text-white">//</span>
-            <p class="pl-2 font-body font-light text-primary dark:text-white">4 min read</p>
-          </div>
-        </div>
-        <div class="border-b border-grey-lighter pt-10 pb-8">
-          <div class="flex items-center">
-            <span class="mb-4 inline-block rounded-full bg-grey-light px-2 py-1 font-body text-sm text-blue-dark">category</span>
-            <span class="mb-4 ml-4 inline-block rounded-full bg-yellow-light px-2 py-1 font-body text-sm text-yellow-dark">category</span>
-          </div>
-          <a x-link href="/post" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">Ut tellus elementum sagittis vitae et leo duis ut diam</a>
-          <div class="flex items-center pt-4">
-            <p class="pr-2 font-body font-light text-primary dark:text-white">June 30, 2020</p>
-            <span class="font-body text-grey dark:text-white">//</span>
-            <p class="pl-2 font-body font-light text-primary dark:text-white">5 min read</p>
-          </div>
-        </div>
-        <div class="border-b border-grey-lighter pt-10 pb-8">
-          <span class="mb-4 inline-block rounded-full bg-blue-light px-2 py-1 font-body text-sm text-blue">category</span>
-          <a x-link href="/post" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">Etiam tempor orci eu lobortis elementum nibh tellus molestie nunc</a>
-          <div class="flex items-center pt-4">
-            <p class="pr-2 font-body font-light text-primary dark:text-white">June 26, 2020</p>
-            <span class="font-body text-grey dark:text-white">//</span>
-            <p class="pl-2 font-body font-light text-primary dark:text-white">3 min read</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="flex pt-8 lg:pt-16">
-        <span class="cursor-pointer border-2 border-secondary px-3 py-1 font-body font-medium text-secondary">1</span>
-        <span class="ml-3 cursor-pointer border-2 border-primary px-3 py-1 font-body font-medium text-primary transition-colors hover:border-secondary hover:text-secondary dark:border-green-light dark:text-white dark:hover:border-secondary dark:hover:text-secondary">2</span>
-        <span class="ml-3 cursor-pointer border-2 border-primary px-3 py-1 font-body font-medium text-primary transition-colors hover:border-secondary hover:text-secondary dark:border-green-light dark:text-white dark:hover:border-secondary dark:hover:text-secondary">3</span>
-        <span class="group ml-3 flex cursor-pointer items-center border-2 border-primary px-3 py-1 font-body font-medium text-primary transition-colors hover:border-secondary hover:text-secondary dark:border-green-light dark:text-white dark:hover:border-secondary dark:hover:text-secondary">Next <i class="bx bx-right-arrow-alt ml-1 text-primary transition-colors group-hover:text-secondary dark:text-white"></i></span>
-      </div>
+  <section class="py-16 lg:py-20">
+    <h1 class="flex items-center gap-3 pt-5 font-body text-4xl font-semibold text-primary dark:text-white md:text-5xl lg:text-6xl">
+      <img src="/assets/img/icon-blog.png" alt="icon envelope" />
+      Blog
+    </h1>
+    <div class="pt-3">
+      <p class="font-body text-xl font-light text-primary dark:text-white">Post list example with pagination.</p>
     </div>
-  </div>
-</div>
+  </section>
+
+  <section x-cloak x-include="components/blog-posts.html" class="pb-16 lg:pb-20"></section>
+
+</section>
