--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,4 @@
-<div>
+<section class="container mx-auto">
 
   <script x-data x-head.json type="application/json">
   {
@@ -26,199 +26,10 @@
   }
   </script>
 
-  <div class="container mx-auto">
-    <div class="border-b border-grey-lighter py-16 lg:py-20">
-      <h1 class="flex items-center gap-3 pt-3 font-body text-4xl font-semibold text-primary dark:text-white md:text-5xl lg:text-6xl">
-        <img src="/assets/img/author.png" class="h-16 w-16" alt="author" />
-        Hi, I’m John Doe.
-      </h1>
-      <p class="pt-3 font-body text-xl font-light text-primary dark:text-white">A software engineer and open-source advocate enjoying the sunny life in Barcelona, Spain.</p>
-      <div x-data="{ greeting: 'Hello!', showGreeting: false }" class="mt-12 flex flex-wrap items-center gap-5">
-        <button @click="showGreeting = ! showGreeting" class="shrink-0 block bg-secondary px-10 py-4 text-center font-body text-xl font-semibold text-white transition-colors hover:bg-green sm:inline-block sm:text-left sm:text-2xl"> Say Hello! </button>
-        <span x-show="showGreeting" x-text="greeting" x-transition class="text-5xl"></span>
-    </div>
+  <section x-cloak x-include="components/welcome.html" class="border-b border-grey-lighter py-16 lg:py-20"></section>
 
-    <div x-cloak>
-      <section x-include="components/hello-world.html" class="border-b border-grey-lighter py-8"></section>
-      <section x-include.markdown="content/welcome.md" class="border-b border-grey-lighter py-8"></section>
-      <section x-json:example="json/example.json" class="border-b border-grey-lighter py-8">
-        <h2 class="mb-3 font-body text-3xl font-semibold text-primary dark:text-white">JSON file content read and store to usable value</h2>
-        <p><strong x-text="$store.example?.menu.value + ':'"></strong></p>
-        <ul x-show="$store.example" class="list-disc pl-5">
-          <template x-for="(item, index) in $store.example?.menu.popup.menuitem" :key="index">
-            <li>
-              <span x-text="item.value"></span>
-              <button @click="alert('You clicked '+item.onclick+' action')" x-text="item.onclick" class="font-body text-green transition-colors hover:text-secondary dark:text-green-light dark:hover:text-secondary"></button>
-            </li>
-          </template>
-        </ul>
-      </section>
-      <section x-json:users="https://jsonplaceholder.typicode.com/users" class="border-b border-grey-lighter py-8">
-        <h2 class="mb-3 font-body text-3xl font-semibold text-primary dark:text-white">JSON API response fetch and store to usable value</h2>
-        <ul x-show="$store.users" class="list-disc pl-5">
-          <template x-for="(user, index) in $store.users" :key="index">
-            <li>
-              <span x-text="user.name"></span>
-              &lt;<a :href="'mailto:'+user.email" :title="'Mail to '+user.email" x-text="user.email" class="font-body text-green transition-colors hover:text-secondary dark:text-green-light dark:hover:text-secondary"></a>&gt;
-              (<a :href="'https://'+user.website" :title="'Open '+user.website" x-text="user.website" target="_blank" rel="nofollow noopener" class="font-body text-green transition-colors hover:text-secondary dark:text-green-light dark:hover:text-secondary"></a>)
-            </li>
-          </template>
-        </ul>
-      </section>
-    </div>
+  <section x-cloak x-include="components/all-posts.html" class="py-16 lg:py-20"></section>
 
-    <div class="border-b border-grey-lighter py-16 lg:py-20">
-      <div class="flex items-center pb-6">
-        <img src="/assets/img/icon-story.png" alt="icon story" />
-        <h3 class="ml-3 font-body text-2xl font-semibold text-primary dark:text-white">My Story</h3>
-      </div>
-      <div>
-        <p class="font-body font-light text-primary dark:text-white">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nibh mauris cursus mattis molestie. Et leo duis ut diam. Sit amet tellus cras adipiscing enim eu turpis. Adipiscing at in tellus integer feugiat.
-          <br />
-          <br />
-          Maecenas accumsan lacus vel facilisis. Eget egestas purus viverra accumsan in nisl nisi scelerisque eu. Non tellus orci ac auctor augue mauris augue neque gravida. Auctor augue mauris augue neque gravida in fermentum et sollicitudin. Tempus urna et pharetra pharetra massa massa ultricies mi quis. Amet mauris commodo quis imperdiet massa. Integer vitae justo eget magna fermentum iaculis eu non.
-        </p>
-      </div>
-    </div>
+  <section x-cloak x-include="components/my-projects.html" class="py-16 lg:py-20"></section>
 
-    <div class="py-16 lg:py-20">
-      <div class="flex items-center pb-6">
-        <img src="/assets/img/icon-story.png" alt="icon story" />
-        <h3 class="ml-3 font-body text-2xl font-semibold text-primary dark:text-white">Blog</h3>
-        <a x-link href="/blog" class="flex items-center pl-10 font-body italic text-green transition-colors hover:text-secondary dark:text-green-light dark:hover:text-secondary">
-          All posts
-          <img src="/assets/img/long-arrow-right.png" class="ml-3" alt="arrow right" />
-        </a>
-      </div>
-      <div x-data="{ posts: [], filteredPosts: [], filterPosts: '', postsOrder: 'desc', postsLimit: 3 }" x-init="posts = await (await fetch('https://jsonplaceholder.typicode.com/posts?_page=1&_limit=3&_sort=id&_order='+postsOrder)).json()" class="pt-8">
-
-        <div class="flex">
-          <input x-model.debounce="filterPosts" x-effect="filteredPosts = filterPosts ? posts.filter(post => post.title.indexOf(filterPosts) > -1 || post.body.indexOf(filterPosts) > -1) : posts" type="text" placeholder="Filter posts by title or body text" class="w-full border border-primary bg-grey-lightest px-5 py-4 font-body font-light text-primary placeholder-primary transition-colors focus:outline-none focus:border-secondary focus:ring-2 focus:ring-secondary dark:border-secondary sm:w-2/3" />
-          <select x-model="postsLimit" @change="posts = await (await fetch('https://jsonplaceholder.typicode.com/posts?_page=1&_limit='+postsLimit+'&_sort=id&_order='+postsOrder)).json()" class="w-20 pr-6 bg-grey-lightest border border-primary text-gray-900 dark:text-primary text-sm border-l-0 focus:outline-none focus:border-secondary focus:ring-2 focus:ring-secondary dark:border-secondary block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500">
-            <option selected disabled>limit</option>
-            <option>3</option>
-            <option>5</option>
-            <option>10</option>
-            <option>100</option>
-          </select>
-          <select x-model="postsOrder" @change="posts = await (await fetch('https://jsonplaceholder.typicode.com/posts?_page=1&_limit='+postsLimit+'&_sort=id&_order='+postsOrder)).json()" class="w-20 pr-6 bg-grey-lightest border border-primary text-gray-900 dark:text-primary text-sm border-l-0 focus:outline-none focus:border-secondary focus:ring-2 focus:ring-secondary dark:border-secondary block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500">
-              <option selected disabled>order</option>
-              <option>asc</option>
-              <option>desc</option>
-          </select>
-        </div>
-
-        <div class="pt-5">
-          Posts: <span x-text="filteredPosts.length"></span> + 3 static ones
-        </div>
-
-        <template x-for="post in filteredPosts" :key="post.id">
-          <div class="border-b border-grey-lighter pt-10 pb-8">
-            <span class="mb-4 inline-block rounded-full bg-green-light px-2 py-1 font-body text-sm text-green">JSON API</span>
-            <a x-link :href="'/blog/'+post.id" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary" x-text="post.title"></a>
-            <p x-text="post.body"></p>
-            <div class="flex items-center pt-4">
-              <p class="pr-2 font-body font-light text-primary dark:text-white">July 19, 2020</p>
-              <span class="font-body text-grey dark:text-white">//</span>
-              <p class="pl-2 font-body font-light text-primary dark:text-white">4 min read</p>
-            </div>
-          </div>
-        </template>
-
-        <div class="border-b border-grey-lighter pt-10 pb-8">
-          <span class="mb-4 inline-block rounded-full bg-green-light px-2 py-1 font-body text-sm text-green">category</span>
-          <a x-link href="/blog/testing123" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">Quis hendrerit dolor magna eget est lorem ipsum dolor sit</a>
-          <div class="flex items-center pt-4">
-            <p class="pr-2 font-body font-light text-primary dark:text-white">July 19, 2020</p>
-            <span class="font-body text-grey dark:text-white">//</span>
-            <p class="pl-2 font-body font-light text-primary dark:text-white">4 min read</p>
-          </div>
-        </div>
-        <div class="border-b border-grey-lighter pt-10 pb-8">
-          <div class="flex items-center">
-            <span class="mb-4 inline-block rounded-full bg-grey-light px-2 py-1 font-body text-sm text-blue-dark">category</span>
-            <span class="mb-4 ml-4 inline-block rounded-full bg-yellow-light px-2 py-1 font-body text-sm text-yellow-dark">category</span>
-          </div>
-          <a x-link href="/blog/post" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">Senectus et netus et malesuada fames ac turpis egestas integer</a>
-          <div class="flex items-center pt-4">
-            <p class="pr-2 font-body font-light text-primary dark:text-white">June 30, 2020</p>
-            <span class="font-body text-grey dark:text-white">//</span>
-            <p class="pl-2 font-body font-light text-primary dark:text-white">5 min read</p>
-          </div>
-        </div>
-        <div class="border-b border-grey-lighter pt-10 pb-8">
-          <span class="mb-4 inline-block rounded-full bg-blue-light px-2 py-1 font-body text-sm text-blue">category</span>
-          <a x-link href="/post" class="block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary">Vulputate ut pharetra sit amet aliquam id diam maecenas ultricies</a>
-          <div class="flex items-center pt-4">
-            <p class="pr-2 font-body font-light text-primary dark:text-white">June 26, 2020</p>
-            <span class="font-body text-grey dark:text-white">//</span>
-            <p class="pl-2 font-body font-light text-primary dark:text-white">3 min read</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="pb-16 lg:pb-20">
-      <div class="flex items-center pb-6">
-        <img src="/assets/img/icon-project.png" alt="icon story" />
-        <h3 class="ml-3 font-body text-2xl font-semibold text-primary dark:text-white">My Projects</h3>
-      </div>
-      <div x-data="{ comments: [] }" x-init="comments = await (await fetch('/json/comments.json')).json()">
-
-        <template x-for="comment in comments">
-          <a x-link :href="'/blog/post/'+comment.id" class="mb-6 flex items-center justify-between border border-grey-lighter px-4 py-4 sm:px-6">
-            <span class="w-9/10 pr-8">
-              <h4 class="font-body text-lg font-semibold text-primary dark:text-white" x-text="comment.name"></h4>
-              <p class="font-body font-light text-primary dark:text-white" x-text="comment.body"></p>
-            </span>
-            <span class="w-1/10">
-              <img src="/assets/img/chevron-right.png" class="mx-auto" alt="chevron right" />
-            </span>
-          </a>
-        </template>
-
-        <a x-link href=" / " class="mb-6 flex items-center justify-between border border-grey-lighter px-4 py-4 sm:px-6">
-          <span class="w-9/10 pr-8">
-            <h4 class="font-body text-lg font-semibold text-primary dark:text-white">TailwindCSS</h4>
-            <p class="font-body font-light text-primary dark:text-white">Rapidly build modern websites without ever leaving your HTML.</p>
-          </span>
-          <span class="w-1/10">
-            <img src="/assets/img/chevron-right.png" class="mx-auto" alt="chevron right" />
-          </span>
-        </a>
-
-        <a x-link href=" / " class="mb-6 flex items-center justify-between border border-grey-lighter px-4 py-4 sm:px-6">
-          <span class="w-9/10 pr-8">
-            <h4 class="font-body text-lg font-semibold text-primary dark:text-white">Maizzle</h4>
-            <p class="font-body font-light text-primary dark:text-white">Framework for Rapid Email Prototyping</p>
-          </span>
-          <span class="w-1/10">
-            <img src="/assets/img/chevron-right.png" class="mx-auto" alt="chevron right" />
-          </span>
-        </a>
-
-        <a x-link href=" / " class="mb-6 flex items-center justify-between border border-grey-lighter px-4 py-4 sm:px-6">
-          <span class="w-9/10 pr-8">
-            <h4 class="font-body text-lg font-semibold text-primary dark:text-white">Alpine.js</h4>
-            <p class="font-body font-light text-primary dark:text-white">Think of it like Tailwind for JavaScript.</p>
-          </span>
-          <span class="w-1/10">
-            <img src="/assets/img/chevron-right.png" class="mx-auto" alt="chevron right" />
-          </span>
-        </a>
-
-        <a x-link href=" / " class="mb-6 flex items-center justify-between border border-grey-lighter px-4 py-4 sm:px-6">
-          <span class="w-9/10 pr-8">
-            <h4 class="font-body text-lg font-semibold text-primary dark:text-white">PostCSS</h4>
-            <p class="font-body font-light text-primary dark:text-white">A tool for transforming CSS with JavaScript</p>
-          </span>
-          <span class="w-1/10">
-            <img src="/assets/img/chevron-right.png" class="mx-auto" alt="chevron right" />
-          </span>
-        </a>
-      </div>
-    </div>
-  </div>
-
-</div>
+</section>
