--- a/pages/about.html
+++ b/pages/about.html
@@ -1,4 +1,4 @@
-<div>
+<section class="container mx-auto">
 
   <script x-data x-head.json type="application/json">
   {
@@ -26,45 +26,48 @@
   }
   </script>
 
-  <div class="container mx-auto">
-    <div class="py-16 lg:py-20">
-      <h1 class="flex items-center gap-3 pt-5 font-body text-4xl font-semibold text-primary dark:text-white md:text-5xl lg:text-6xl">
-        <img src="/assets/img/icon-uses.png" alt="icon uses" />
-        About
-      </h1>
-      <div class="pr-2 pt-3">
-        <span class="font-body text-xl font-light text-primary dark:text-white">
-          Inspired by
-          <a href="https://uses.tech/" target="_blank" class="border-b border-green">
-            <span class="font-medium text-green hover:text-secondary dark:text-green-light dark:hover:text-secondary">Wes Bos</span>
-            and his project,
-            <span class="font-medium text-green hover:text-secondary dark:text-green-light dark:hover:text-secondary">uses.tech</span>.
-          </a>
-        </span>
-      </div>
-
-      <div class="pt-16 lg:pt-20">
-        <h3 class="pb-8 font-body text-2xl font-semibold text-primary dark:text-white">Computer + Workspace</h3>
-        <ul class="list-disc pl-10">
-          <li class="font-body text-lg font-light text-primary dark:text-white">
-            <span class="font-medium">Computer:</span>
-            I use a 2019 16"
-            <a href="/" class="font-medium text-green underline hover:text-secondary dark:text-green-light dark:hover:text-secondary">MacBook Pro</a>
-            (i9/32GB/512gb) for everything (work + personal). The physical escape key and fixed keyboard is amazing.
-          </li>
-          <li class="pt-5 font-body text-lg font-light text-primary dark:text-white">
-            <span class="font-medium">Chair:</span>
-            When I sit, I sit on an
-            <a href="/" class="font-medium text-green underline hover:text-secondary dark:text-green-light dark:hover:text-secondary">Herman Miller Mirra 2</a>, but I stand almost 100% of the time, so the chair doesn’t do me much good.
-          </li>
-          <li class="pt-5 font-body text-lg font-light text-primary dark:text-white">
-            <span class="font-medium">Desk:</span>
-            My desk is a
-            <a href="/" class="font-medium text-green underline hover:text-secondary dark:text-green-light dark:hover:text-secondary">Fully Jarvis standing desk</a>
-            (which I love) with the Bamboo top (which I don't recommend). If you're looking for a great sit-stand desk, I highly recommend Jarvis. Also, purchase directly from Fully vs. Amazon. Fully's customer support is incredible.
-          </li>
-        </ul>
-      </div>
+  <section class="py-16 lg:py-20">
+    <h1 class="flex items-center gap-3 pt-5 font-body text-4xl font-semibold text-primary dark:text-white md:text-5xl lg:text-6xl">
+      <img src="/assets/img/icon-uses.png" alt="icon uses" />
+      About
+    </h1>
+    <div class="pr-2 pt-3 sm:pt-0">
+      <p class="font-body text-xl font-light text-primary dark:text-white">App possible features in examples.</p>
     </div>
-  </div>
-</div>
+  </section>
+
+  <section x-cloak x-include="components/my-story.html" class="border-b border-grey-lighter py-8"></section>
+  <section x-cloak x-include="components/hello-world.html" class="border-b border-grey-lighter py-8"></section>
+  <section x-cloak x-include.markdown="content/welcome.md" class="border-b border-grey-lighter py-8"></section>
+
+  <section x-cloak x-json:example="json/example.json" class="border-b border-grey-lighter py-8">
+    <div class="container mx-auto">
+      <h2 class="mb-3 font-body text-3xl font-semibold text-primary dark:text-white">JSON file content read and store to usable value</h2>
+      <p><strong x-text="$store.example?.menu.value + ':'"></strong></p>
+      <ul x-show="$store.example" class="list-disc pl-5">
+        <template x-for="(item, index) in $store.example?.menu.popup.menuitem" :key="index">
+          <li>
+            <span x-text="item.value"></span>
+            <button @click="alert('You clicked '+item.onclick+' action')" x-text="item.onclick" class="font-body text-green transition-colors hover:text-secondary dark:text-green-light dark:hover:text-secondary"></button>
+          </li>
+        </template>
+      </ul>
+    </div>
+  </section>
+
+  <section x-cloak x-json:users="https://jsonplaceholder.typicode.com/users" class="border-b border-grey-lighter py-8">
+    <div class="container mx-auto">
+      <h2 class="mb-3 font-body text-3xl font-semibold text-primary dark:text-white">JSON API response fetch and store to usable value</h2>
+      <ul x-show="$store.users" class="list-disc pl-5">
+        <template x-for="(user, index) in $store.users" :key="index">
+          <li>
+            <span x-text="user.name"></span>
+            &lt;<a :href="'mailto:'+user.email" :title="'Mail to '+user.email" x-text="user.email" class="font-body text-green transition-colors hover:text-secondary dark:text-green-light dark:hover:text-secondary"></a>&gt;
+            (<a :href="'https://'+user.website" :title="'Open '+user.website" x-text="user.website" target="_blank" rel="nofollow noopener" class="font-body text-green transition-colors hover:text-secondary dark:text-green-light dark:hover:text-secondary"></a>)
+          </li>
+        </template>
+      </ul>
+    </div>
+  </section>
+
+</section>
