improve posts & consistency, remove unnecessary

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -31,7 +31,7 @@
       <img src="/assets/img/icon-contact.png" alt="icon envelope" />
       Contact
     </h1>
-    <div class="pr-2 pt-3 sm:pt-0">
+    <div class="pt-3">
       <p class="font-body text-xl font-light text-primary dark:text-white">Got a question or proposal, or just want to say hello? Go ahead. You know what to do.</p>
     </div>
     <section x-cloak x-include="components/contact-form.html"></section>
