--- a/pages/about.html
+++ b/pages/about.html
@@ -31,7 +31,7 @@
       <img src="/assets/img/icon-uses.png" alt="icon uses" />
       About
     </h1>
-    <div class="pr-2 pt-3 sm:pt-0">
+    <div class="pt-3">
       <p class="font-body text-xl font-light text-primary dark:text-white">App possible features in examples.</p>
     </div>
   </section>
@@ -41,7 +41,7 @@
   <section x-cloak x-include.markdown="content/welcome.md" class="border-b border-grey-lighter py-8"></section>
 
   <section x-cloak x-json:example="json/example.json" class="border-b border-grey-lighter py-8">
-    <div class="container mx-auto">
+    <div>
       <h2 class="mb-3 font-body text-3xl font-semibold text-primary dark:text-white">JSON file content read and store to usable value</h2>
       <p><strong x-text="$store.example?.menu.value + ':'"></strong></p>
       <ul x-show="$store.example" class="list-disc pl-5">
@@ -56,7 +56,7 @@
   </section>
 
   <section x-cloak x-json:users="https://jsonplaceholder.typicode.com/users" class="border-b border-grey-lighter py-8">
-    <div class="container mx-auto">
+    <div>
       <h2 class="mb-3 font-body text-3xl font-semibold text-primary dark:text-white">JSON API response fetch and store to usable value</h2>
       <ul x-show="$store.users" class="list-disc pl-5">
         <template x-for="(user, index) in $store.users" :key="index">
