--- a/pages/home.html
+++ b/pages/home.html
@@ -28,8 +28,8 @@
 
   <section x-cloak x-include="components/welcome.html" class="border-b border-grey-lighter py-16 lg:py-20"></section>
 
-  <section x-cloak x-include="components/all-posts.html" class="py-16 lg:py-20"></section>
+  <section x-cloak x-include="components/my-posts.html" class="py-16 lg:py-20"></section>
 
-  <section x-cloak x-include="components/my-projects.html" class="py-16 lg:py-20"></section>
+  <section x-cloak x-include="components/my-comments.html" class="py-16 lg:py-20"></section>
 
 </section>
