add template to app name, seperate more files, fix

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -32,10 +32,10 @@
       Blog
     </h1>
     <div class="pt-3">
-      <p class="font-body text-xl font-light text-primary dark:text-white">Post list example with pagination.</p>
+      <p class="font-body text-xl font-light text-primary dark:text-white">Post list example.</p>
     </div>
   </section>
 
-  <section x-cloak x-include="components/blog-posts.html" class="pb-16 lg:pb-20"></section>
+  <section x-cloak x-include="components/post-list.html"></section>
 
 </section>
