--- a/pages/contact.html
+++ b/pages/contact.html
@@ -32,7 +32,7 @@
       Contact
     </h1>
     <div class="pt-3">
-      <p class="font-body text-xl font-light text-primary dark:text-white">Got a question or proposal, or just want to say hello? Go ahead. You know what to do.</p>
+      <p class="font-body text-xl font-light text-primary dark:text-white">Got a question or proposal, or just want to say hello? Go ahead, don't be shy.</p>
     </div>
     <section x-cloak x-include="components/contact-form.html"></section>
   </div>
