--- a/pages/home.html
+++ b/pages/home.html
@@ -26,7 +26,9 @@
   }
   </script>
 
-  <section x-cloak x-include="components/welcome.html" class="border-b border-grey-lighter py-16 lg:py-20"></section>
+  <section x-cloak x-include="components/welcome.html" class="border-b border-grey-lighter py-8"></section>
+
+  <section x-cloak x-include="components/my-story.html" class="border-b border-grey-lighter py-8"></section>
 
   <section x-cloak x-include="components/my-posts.html" class="py-16 lg:py-20"></section>
 
