improve consistency and app description

--- a/pages/about.html
+++ b/pages/about.html
@@ -32,7 +32,7 @@
       About
     </h1>
     <div class="pt-3">
-      <p class="font-body text-xl font-light text-primary dark:text-white">App possible features in examples.</p>
+      <p class="font-body text-xl font-light text-primary dark:text-white">App features in examples.</p>
     </div>
   </section>
 
