--- a/pages/home.html
+++ b/pages/home.html
@@ -26,7 +26,7 @@
   }
   </script>
 
-  <section x-cloak x-include="components/welcome.html" class="border-b border-grey-lighter py-8"></section>
+  <section x-cloak x-include="components/welcome.html" class="border-b border-grey-lighter pt-16 lg:pt-20 pb-8"></section>
 
   <section x-cloak x-include="components/my-story.html" class="border-b border-grey-lighter py-8"></section>
 
